--- a/memefolder.xcodeproj/xcshareddata/xcschemes/shareExtension.xcscheme
+++ b/memefolder.xcodeproj/xcshareddata/xcschemes/shareExtension.xcscheme
@@ -57,8 +57,12 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "0"
+         BundleIdentifier = "com.atebits.Tweetie2"
+         RemotePath = "/var/containers/Bundle/Application/807030FC-713D-475A-877F-53FB6EF82778/Twitter.app">
+      </RemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C9FD9D6E23BFF14B007A7FA4"
@@ -66,7 +70,14 @@
             BlueprintName = "memefolder"
             ReferencedContainer = "container:memefolder.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -74,6 +85,7 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
       launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
